# nfa-regex

./: .gitignore  CMakeLists.txt  Plan.txt  README.md  tatus
.github/workflows/: ci.yml
include/: Alphabet.h  Bindings.h  NFA.h  Node.h  Parser.h  Rules.h  State.h  Token.h  Types.h  Visitor.h
scripts/: build.sh  clean.py
src/: Bindings.cpp  NFA.cpp  Node.cpp  Parser.cpp  State.cpp  Token.cpp  Visitor.cpp  main.cpp
tests/: accept.sh  perf.data  tests.py
tests/keys/: comp.txt  paren.txt  star.txt  union-concat.txt
web/: regex_web.wasm  test.html
